# gemsnrocks_asm

./: .gitattributes  README.md  build.sh
assets/: exit.xcf  gem.xcf  rock.xcf  soil.xcf  wall.xcf
src/: common.mac  draw.asm  levels.asm  main.asm  util.asm
tools/cleanbmp/: CMakeLists.txt  README.md
tools/cleanbmp/src/: main.cpp
